# FS-Renamer

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
src/: lib.rs  main.rs
src/config/: mod.rs  tests.rs
src/renamer/: mod.rs  tests.rs
tests/: run_test_1_basic.rs
