[package]
name = "fsrenamer"
version = "0.2.0"
edition = "2021"
authors = ["Michal Friml <michal.m.friml@gmail.com>"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/MichalFriml/FS-Renamer"
description = "A tool for refactoring invalid file/dir names"

[dependencies]

[[bin]]
name = "fsrenamer"
path = "src/main.rs"